--- a/geppa-front-end/src/Presentation/Components/Header/StyleHeader.css
+++ b/geppa-front-end/src/Presentation/Components/Header/StyleHeader.css
@@ -1,4 +1,4 @@
-.headerDiv{
+.header{
     height: 100px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -9,17 +9,30 @@
     padding-left: 5%;
 }
 
-.headerDiv img{
+.header img{
     height: 80%;
     width: auto;
 }
 
-.headerDiv .linksHeader a{
+.headernavigation-list{
+    display: flex;
+    list-style-type: none;
+}
 
-    margin-left: 30px;
+.headernavigation-item a{
     color: var(--MarromTerra);
+    margin-left: 30px;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
+    padding: 7px;
+    border-radius: 5px;
+    transition: background 0.5s ease-in-out;
+}
+
+/* O (.active) deve estar junto com a tag */
+.headernavigation-item a.active{
+    color: white;
+    background:var(--MarromTerra);;
 }
 
