feat: adiciona a area de cadastro de email na pagina inicial

--- a/geppa-front-end/src/Presentation/Components/Inicial/Banner/banner.css
+++ b/geppa-front-end/src/Presentation/Components/Inicial/Banner/banner.css
@@ -35,3 +35,10 @@
     text-align: justify;
     color: var(--MarromEscuro);
 }
+
+/*Se quiser tirar esse media screen tira o texto do banner*/
+@media screen and (max-width: 600px) {
+    .banner-home__container-text {
+        display: none;
+    }
+}
