--- a/geppa-front-end/src/Presentation/Components/Inicial/UltimosConteudos/StyleUltimosConteudos.css
+++ b/geppa-front-end/src/Presentation/Components/Inicial/UltimosConteudos/StyleUltimosConteudos.css
@@ -1,9 +1,13 @@
-.card-ultimos-conteudos {
+.card-ultimos-conteudos{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
-    text-overflow: ellipsis;
     line-height: 1.3em;
-    text-align: justify;
-    height: calc(1.3em * 3);
+    min-height: 4em;
+}
+
+.card-ultimos-conteudos p{
     overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
