--- a/geppa-front-end/src/Presentation/Components/ComponentesBoletim/StyleCardBoletim.css
+++ b/geppa-front-end/src/Presentation/Components/ComponentesBoletim/StyleCardBoletim.css
@@ -13,11 +13,15 @@
 }
 
 .card-boletim-btn{
-    text-decoration: none;
+
     color: var(--VerdeOliva);
     border: var(--VerdeOliva) 3px solid ;
     border-radius: 20px;
     cursor: pointer;
+}
+.card-boletim-btn a{
+    color: var(--VerdeOliva);
+    text-decoration: none;
 }
 .btn-abrir-video-boletim{
     background: none;
