--- a/geppa-front-end/src/Presentation/Components/Modais/ComponentesModal/StylesComponentesModal/StyleListaDeIndicadores.css
+++ b/geppa-front-end/src/Presentation/Components/Modais/ComponentesModal/StylesComponentesModal/StyleListaDeIndicadores.css
@@ -1,17 +1,13 @@
 .btn-adicionar-indicador{
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
+    background-color: #84a147;
     color: white;
     border: none;
     transition: background-color 0.3s ease;
-
 }
 
 .btn-adicionar-indicador:active{
     background-color: #3a5012;
 }
-
 
 .icone-edit-delete{
     cursor: pointer;
