fix: adicao de cor as badges da listagem de conteudos na pagina de listagem de boletins

--- a/geppa-front-end/src/Presentation/Components/ListaConteudosPaginaBoletins/StyleListaCOnteudosPaginaBoletim.css
+++ b/geppa-front-end/src/Presentation/Components/ListaConteudosPaginaBoletins/StyleListaCOnteudosPaginaBoletim.css
@@ -21,3 +21,9 @@
     text-overflow: ellipsis;
 
 }
+
+.badge-ultimos-conteudos{
+    background-color: var(--VerdeOliva);
+    color: white;
+    width: 100%;
+}
